# chatbot-san-projekt

./: .env.example  README.md  chatbot_san.py  docker-compose.yml  knowledge.json  requirements.txt
backend/: Dockerfile  main.py  pyproject.toml
backend/rag/: chain.py  retriever.py
backend/routers/: chat.py  retrieve.py
backend/scripts/: ingest.py
frontend/: package-lock.json  package.json
frontend/app/: assistant.tsx
frontend/app/api/chat/: route.ts
frontend/components/assistant-ui/: threadlist-sidebar.tsx
legacy/: requirements.txt
scripts/: ingest.py
