[project]
name = "san-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-postgres>=0.0.17",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pypdf>=6.11.0",
    "uvicorn[standard]>=0.47.0",
]
